--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.weather"
         minSdkVersion 17
         targetSdkVersion 28
-        versionCode 18
-        versionName "1.8"
+        versionCode 180
+        versionName "1.8.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     dataBinding {
@@ -40,6 +40,8 @@ dependencies {
     implementation "com.google.android.material:material:1.0.0"
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.okhttp3:okhttp:3.14.0'
+    implementation 'com.jrummyapps:colorpicker:2.1.6'
+    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
