--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,22 @@
         android:roundIcon="@drawable/weather"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <receiver android:name=".widgets.MyWidget2">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
 
-        <receiver android:name=".MyWidget">
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget2_info" />
+        </receiver>
+
+        <activity
+            android:name=".widgets.WidgetSetting">
+
+        </activity>
+
+        <receiver android:name=".widgets.MyWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
