--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,23 @@
     package="com.weather">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/weather"
         android:label="@string/app_name"
+        android:persistent="true"
         android:roundIcon="@drawable/weather"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:persistent="true">
-        <receiver android:name=".widgets.MyWidget2">
+        android:theme="@style/AppTheme">
+        <service
+            android:name=".ui.widget.WidgetUpdateService"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <receiver android:name=".ui.widget.MyWidget2">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -23,7 +29,7 @@
                 android:resource="@xml/widget2_info" />
         </receiver>
 
-        <receiver android:name=".widgets.MyWidget">
+        <receiver android:name=".ui.widget.MyWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -33,13 +39,15 @@
                 android:resource="@xml/widget_info" />
         </receiver>
 
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:configChanges="orientation|screenSize"
+            android:excludeFromRecents="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
