--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,9 @@ android {
         applicationId "com.weather"
         minSdkVersion 17
         targetSdkVersion 28
-        versionCode 197
-        versionName "1.9.7"
+        versionCode 200
+        versionName "2.0.0"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     dataBinding {
@@ -33,26 +34,53 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            res.srcDirs = ['src/main/res','src/main/res-dark']
+        }
+    }
+    buildToolsVersion = '28.0.3'
 }
 
 dependencies {
     def lifecycle_version = "2.1.0-beta01"
+    def multidex_version = "2.0.1"
+    def coroutines_version = "1.2.0"
+    def skin_version = "4.0.4"
+    def core_ktx_version = "1.0.1"
+    def appcompat_version = "1.1.0"
+    def constraintlayout_version = "1.1.3"
+    def gson_version = "2.8.5"
+    def retrofit_version = "2.6.0"
+    def mysql_version = "5.1.46"
+    def smart_refresh_version = "1.1.0"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    // For loading and tinting drawables on older versions of the platform
+    implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
+    implementation "androidx.multidex:multidex:$multidex_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
-    implementation 'androidx.core:core-ktx:1.0.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.core:core-ktx:$core_ktx_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation "com.google.code.gson:gson:$gson_version"
     implementation 'com.squareup.okhttp3:okhttp:3.12.x'
     implementation 'com.jrummyapps:colorpicker:2.1.7'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "mysql:mysql-connector-java:$mysql_version"
+    implementation "skin.support:skin-support:$skin_version"                 // skin-support
+    implementation "skin.support:skin-support-appcompat:$skin_version"         // skin-support 基础控件支持
+    implementation "skin.support:skin-support-design:$skin_version"            // skin-support-design material design 控件支持[可选]
+    implementation "skin.support:skin-support-constraint-layout:$skin_version"
+    implementation "com.scwang.smartrefresh:SmartRefreshLayout:$smart_refresh_version"
+    implementation "com.scwang.smartrefresh:SmartRefreshHeader:$smart_refresh_version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
