--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,8 +48,7 @@
         </receiver>
 
         <activity android:name="com.weather.MainActivity"
-            android:configChanges="orientation|screenSize"
-            android:excludeFromRecents="true">
+            android:configChanges="orientation|screenSize">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
