--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,24 +35,22 @@ android {
     }
     sourceSets {
         main {
-            res.srcDirs = ['src/main/res', 'src/main/res-dark']
+            res.srcDirs = ['src/main/res']
         }
     }
     buildToolsVersion = '28.0.3'
 }
 
 dependencies {
-    implementation files('libs\\HeWeather_Public_Android_V4.1.jar')
+    implementation files('libs/HeWeather_Public_Android_V4.1.jar')
     def lifecycle_version = "2.2.0"
     def multidex_version = "2.0.1"
     def coroutines_version = "1.3.9"
-    def skin_version = "4.0.4"
     def core_ktx_version = "1.3.2"
     def appcompat_version = "1.2.0"
     def constraintlayout_version = "2.0.2"
     def gson_version = "2.8.6"
     def retrofit_version = "2.9.0"
-    def mysql_version = "5.1.46"
     def smart_refresh_version = "1.1.0"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -61,6 +59,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
     implementation "androidx.multidex:multidex:$multidex_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "androidx.core:core-ktx:$core_ktx_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
@@ -73,13 +72,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-    implementation "mysql:mysql-connector-java:$mysql_version"
-    implementation "skin.support:skin-support:$skin_version"                 // skin-support
-    implementation "skin.support:skin-support-appcompat:$skin_version"
-    // skin-support 基础控件支持
-    implementation "skin.support:skin-support-design:$skin_version"
-    // skin-support-design material design 控件支持[可选]
-    implementation "skin.support:skin-support-constraint-layout:$skin_version"
     implementation "com.scwang.smartrefresh:SmartRefreshLayout:$smart_refresh_version"
     implementation "com.scwang.smartrefresh:SmartRefreshHeader:$smart_refresh_version"
 
