删除无用代码

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,16 +33,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets {
-        main {
-            res.srcDirs = ['src/main/res']
-        }
-    }
+
     buildToolsVersion = '28.0.3'
 }
 
 dependencies {
     implementation files('libs/HeWeather_Public_Android_V4.1.jar')
+    implementation 'androidx.preference:preference-ktx:1.1.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     def lifecycle_version = "2.2.0"
     def multidex_version = "2.0.1"
     def coroutines_version = "1.3.9"
@@ -51,12 +49,9 @@ dependencies {
     def constraintlayout_version = "2.0.2"
     def gson_version = "2.8.6"
     def retrofit_version = "2.9.0"
-    def smart_refresh_version = "1.1.0"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "androidx.appcompat:appcompat:$appcompat_version"
-    // For loading and tinting drawables on older versions of the platform
-    implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
     implementation "androidx.multidex:multidex:$multidex_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
@@ -64,17 +59,13 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation 'com.google.android.material:material:1.2.1'
     implementation "com.google.code.gson:gson:$gson_version"
     implementation 'com.squareup.okhttp3:okhttp:3.14.9'
-    implementation 'com.jrummyapps:colorpicker:2.1.7'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-    implementation "com.scwang.smartrefresh:SmartRefreshLayout:$smart_refresh_version"
-    implementation "com.scwang.smartrefresh:SmartRefreshHeader:$smart_refresh_version"
-
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
-    implementation files('libs/nineoldandroids-2.4.0.jar')
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
