--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,15 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
+    buildToolsVersion = '31.0.0'
+
     defaultConfig {
         applicationId "com.weather"
         minSdkVersion 17
-        targetSdkVersion 30
-        versionCode 301
-        versionName "3.0.1"
+        targetSdkVersion 33
+        versionCode 302
+        versionName "3.0.2"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -32,7 +34,9 @@ android {
         }
     }
 
-    buildToolsVersion = '29.0.2'
+    packagingOptions{
+        exclude 'classes.dex'
+    }
 }
 
 dependencies {
