--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
             android:enabled="true"
             android:exported="true" />
 
-        <receiver android:name="com.weather.widget.MyWidget2">
+        <receiver android:name="com.weather.widget.MyWidget2"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -33,7 +34,8 @@
                 android:resource="@xml/widget2_info" />
         </receiver>
 
-        <receiver android:name="com.weather.widget.MyWidget">
+        <receiver android:name="com.weather.widget.MyWidget"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -44,7 +46,8 @@
         </receiver>
 
         <activity android:name="com.weather.MainActivity"
-            android:configChanges="orientation|screenSize">
+            android:configChanges="orientation|screenSize"
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
